@@ -1,3 +1,10 @@
+2002-01-20  Tim Waugh  <twaugh@redhat.com>
+
+	* parport_pc.c (parport_pc_compat_write_block_pio,
+	parport_pc_ecp_write_block_pio, parport_pc_ecp_read_block_pio):
+	Use the default implementations if the caller wants to use
+	O_NONBLOCK.
+
 2002-02-25  Tim Waugh  <twaugh@redhat.com>
 
 	* parport_pc.c: Make sure that priv->ctr_writable includes IntEn
